# nonoise

./: .gitignore  Cargo.toml  README.md
nnnoiseless_ladspa/: Cargo.toml
nnnoiseless_ladspa/src/: lib.rs
nnnoiseless_plugin/: Cargo.toml
nnnoiseless_plugin/src/: lib.rs
src/: main.rs
