[package]
name = "nonoise"
version = "0.1.0"
authors = ["Brendan Ball <ball.brendan50@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies.nnnoiseless_ladspa]
path = "nnnoiseless_ladspa"

[dependencies.nnnoiseless_plugin]
path = "nnnoiseless_plugin"

[dependencies]
libpulse-binding = "2.16.1"
libpulse-simple-binding = "2.16.0"
hound = "3.4.0"
byteorder = "1.3.4"
nnnoiseless = "0.2.1"
dasp = "0.11.0"
rust-pulsectl = "0.2.6"
