[package]
name = "nnnoiseless_ladspa"
version = "0.1.0"
authors = ["Brendan Ball <ball.brendan50@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nnnoiseless_ladspa"
crate-type = ["dylib"]

[dependencies]
ladspa = "0.3.4"

[dependencies.nnnoiseless_plugin]
path = "../nnnoiseless_plugin"