[package]
name = "nnnoiseless_plugin"
version = "0.1.0"
authors = ["Brendan Ball <ball.brendan50@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nnnoiseless_plugin"

[dependencies]
nnnoiseless = "0.2.1"
dasp_graph = "0.11.0"

[dependencies.dasp]
version = "0.11.0"
features = ["signal"]
